Fix header overflow

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ button.darkButton{
   border-style: solid;
   border-color: #fff;
   width: 252px;
-  margin-left: 713px;
+  margin-left: 100px;
   min-width: 300px;
   margin-right: 18px;
 }
